--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: blank
 
           <p class="light">Thanks to the new core, cSploit will be easily portable.
             <br /><br />
-          Basically it can run on any UNIX-based system, but for now only Andorid is supported. When I reach a beta-state version I will consider working on iOS, OSX, GTK+ and QT.</p>
+          Basically it can run on any UNIX-based system, but for now only Android is supported. When I reach a beta-state version I will consider working on iOS, OSX, GTK+ and QT.</p>
         </div>
       </div>
 
