--- a/downloads.html
+++ b/downloads.html
@@ -3,7 +3,7 @@ title: Downloads
 position: 3
 ---
 <div class="section">
-  <h5>cSploit release apks</h5>
+  <h5>cSploit Release APK</h5>
   <p>cSploit releases are hosted on github.</p>
   <ul>
     <li><b>- release</b> are stables versions.</li>
@@ -15,6 +15,6 @@ position: 3
   
 </div>
 <div class="section">
-  <h5>cSploit nightly builds</h5>
-  <p>Thanks to rootbitch - nightly builds are available <a href="http://rootbitch.cc/csploit/cSploit-nightly.apk">here</a>.</p>
+  <h5>cSploit Nightly APK</h5>
+  <p>Thanks to xaitax - nightly builds are available here <a href="http://rootbitch.cc/csploit/cSploit-nightly.apk" id="download-button" class="btn green waves-effect waves-light">here</a>.</p>
 </div>
