--- a/downloads.html
+++ b/downloads.html
@@ -16,5 +16,6 @@ position: 3
 </div>
 <div class="section">
   <h5>cSploit Nightly APK</h5>
-  <p>Thanks to xaitax - nightly builds are available here <a href="http://rootbitch.cc/csploit/cSploit-nightly.apk" id="download-button" class="btn green waves-effect waves-light">here</a>.</p>
+  <p>Thanks to xaitax - nightly builds are available:</p>
+  <a href="http://rootbitch.cc/csploit/cSploit-nightly.apk" id="download-button" class="btn green waves-effect waves-light">Download</a>
 </div>
