added Pledgie donation and adjusted donation buttons in columns

--- a/donate.html
+++ b/donate.html
@@ -8,18 +8,22 @@ Incomings of donations will be used to buy hardware and services required
 by cSploit developers and network infrastructure.
 </p>
 
-<div class="section">
-  <h5>Donate via PayPal</h5>
-  <!--<a class="waves-effect waves-light btn amber black-text" href="https://www.paypal.com/uk/cgi-bin/webscr?cmd=_flow&SESSION=o_bFxeimjBkMm7UJ0DUpy9kygjGKR87XcfE06nypZwmhAV_Cjb5GA8KW9ci&dispatch=5885d80a13c0db1f8e263663d3faee8d5c97cbf3d75cb63effe5661cdf3adb6d" target="_blank">PayPal</a>-->
-  {% include paypal_widget.html %}
+<div class="row">
+  <div class="col m4">
+    <h5>PayPal <i class="material-icons">favorite</i></h5>
+    <!--<a class="waves-effect waves-light btn amber black-text" href="https://www.paypal.com/uk/cgi-bin/webscr?cmd=_flow&SESSION=o_bFxeimjBkMm7UJ0DUpy9kygjGKR87XcfE06nypZwmhAV_Cjb5GA8KW9ci&dispatch=5885d80a13c0db1f8e263663d3faee8d5c97cbf3d75cb63effe5661cdf3adb6d" target="_blank">PayPal</a>-->
+    {% include paypal_widget.html %}
+  </div>
+  <div class="col m4">
+    <h5>Pledgie</h5>
+    {% include pledgie_widget.html %}
+  </div>
+  <div class="col m4">
+    <h5>Bitcoin</h5>
+    <!--<a class="waves-effect waves-light btn amber black-text">Bitcoin</a>-->
+    {% include bitcoin_widget.html %}
+  </div>
 </div>
-<div class="divider"></div>
-<div class="section">
-  <h5>Donate via Bitcoin</h5>
-  <!--<a class="waves-effect waves-light btn amber black-text">Bitcoin</a>-->
-  {% include bitcoin_widget.html %}
-</div>
-
 <br>
 
 <h4>Things to purchase:</h4>
