updated donation page

--- a/donate.html
+++ b/donate.html
@@ -26,12 +26,19 @@ by cSploit developers and network infrastructure.
 </div>
 <br>
 
-<h4>Things to purchase:</h4>
+<p>
+The main goal of this crowdfunding is to purchase a small set of stuff to help the development.
 <ul>
+  <li>- A new Thinkpad laptop with a good battery and memory</li>
+  <li>- A set of common WiFi adapters</li>
+  <li>- Some bluetooth adapter to add bluetooth hacking feature</li>
+  <li>- Some OTG adapters for pentestng over Ethernet and USB</li>
   <li>- An old used iPhone</li>
-  <li>- A Build Server</li>
-  <li>- An USB OTG adapter</li>
+  <li>- csploit.org DNS record</li>
 </ul>
-<p>We must also pay annual services like the csploit.org DNS record and more.
+As now I’m using a Thinkpad T60, purchased by a kindness guy of you.<br>
+Sadly the battery life it’s about 30 minutes ( even if I purchased the biggest one ).<br>
+Also using heavy development tools require a lot of memory, as now 3GB of memory isn’t enough.<br>
 <br />
 Thanks for your help! <i class="material-icons">thumb_up</i></p>
+
