--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: blank
       <h5 class="header col s12 light">The most complete and advanced IT security professional toolkit on Android.</h5>
     </div>
     <div class="row center">
-      <a href="{{ "downloads.html" | prepend: site.baseurl }}" id="download-button" class="btn-large green waves-effect waves-light">Get Started</a>
+      <a href="{{ "downloads/" | prepend: site.baseurl }}" id="download-button" class="btn-large green waves-effect waves-light">Get Started</a>
     </div>
     <br><br>
   </div>
