--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: blank
           <h2 class="center green-text"><i class="medium material-icons">insert_emoticon</i></h2>
           <h5 class="center">Support us</h5>
 
-          <p class="light">Please <a href="{{ "donate.html" | prepend: site.baseurl }}">donate</a> to cSploit to support our efforts and resources. Thank you!
+          <p class="light">Please <a href="{{ "donate/" | prepend: site.baseurl }}">donate</a> to cSploit to support our efforts and resources. Thank you!
           <br /><br />
           Also, if you want to contribute fork the repo you want to contribute to and create a pull request when you're done. If you actively contribute to the project I will ask you to join the team.</p>
         </div>
