--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@ title: News
 position: 5
 ---
 
-<div class="collection col s12 l6">
+<div class="col s12 l6">
   <h4>News</h4>
   <div class="divider"></div>
   {% for post in site.categories.news %}
