2 buttons must have different id

--- a/downloads.html
+++ b/downloads.html
@@ -11,11 +11,11 @@ position: 3
   </ul>
   <p>To download the application, click on the green button below and download the latest "cSploit-release.apk" file.</p>
   
-  <a href="https://github.com/cSploit/android/releases" id="download-button" class="btn green waves-effect waves-light">Download</a>
+  <a href="https://github.com/cSploit/android/releases" id="download-button-release" class="btn green waves-effect waves-light">Download</a>
   
 </div>
 <div class="section">
   <h5>cSploit Nightly APK</h5>
   <p>Thanks to xaitax - nightly builds are available:</p>
-  <a href="http://rootbitch.cc/csploit/cSploit-nightly.apk" id="download-button" class="btn green waves-effect waves-light">Download</a>
+  <a href="http://rootbitch.cc/csploit/cSploit-nightly.apk" id="download-button-beta" class="btn green waves-effect waves-light">Download</a>
 </div>
