--- a/index.html
+++ b/index.html
@@ -1,73 +1,6 @@
----
-title: Home
-position: 0
-layout: blank
----
-<div class="section no-pad-bot" id="index-banner">
-  <div class="container">
-    <br><br>
-    <h1 class="header center">cSploit</h1>
-    <div class="row center">
-      <h5 class="header col s12 light">The most complete and advanced IT security professional toolkit on Android.</h5>
-    </div>
-    <div class="row center">
-      <a href="{{ "downloads/" | prepend: site.baseurl }}" id="download-button" class="btn-large green waves-effect waves-light">Get Started</a>
-    </div>
-    <br><br>
-  </div>
-</div>
-
-
-<div class="container">
-  <div class="section">
-
-    <!--   Icon Section   -->
-    <div class="row">
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center green-text"><i class="medium material-icons">arrow_forward</i></h2>
-          <h5 class="center">cSploit target</h5>
-
-          <p class="light">My final goal is to write an application that is able to:
-            <ul class="light">
-              <li>- enumerate local hosts<i class="tiny material-icons">done</i></li>
-              <li>- find vulnerabilities<i class="tiny material-icons">done</i></li>
-              <li>- find exploits for these vulnerabilities<i class="tiny material-icons">done</i></li>
-              <li>- use those exploits to gain access to the target<i class="tiny material-icons">done</i></li>
-              <li>- crack wifi passwords</li>
-              <li>- install backdoors for later access</li>
-            </ul>
-          </p>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center green-text"><i class="medium material-icons">settings</i></h2>
-          <h5 class="center">Portability</h5>
-
-          <p class="light">Thanks to the new core, cSploit will be easily portable.
-            <br /><br />
-          Basically it can run on any UNIX-based system, but for now only Android is supported. When I reach a beta-state version I will consider working on iOS, OSX, GTK+ and QT.</p>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center green-text"><i class="medium material-icons">insert_emoticon</i></h2>
-          <h5 class="center">Support us</h5>
-
-          <p class="light">Please <a href="{{ "donate/" | prepend: site.baseurl }}">donate</a> to cSploit to support our efforts and resources. Thank you!
-          <br /><br />
-          Also, if you want to contribute fork the repo you want to contribute to and create a pull request when you're done. If you actively contribute to the project I will ask you to join the team.</p>
-        </div>
-      </div>
-    </div>
-
-  </div>
-  <br><br>
-
-  <div class="section">
-
-  </div>
-</div>
+<!DOCTYPE HTML>
+<html>
+<head>
+  <meta http-equiv="refresh" content="0; /home/" />
+</head>
+</html>
