--- a/news.html
+++ b/news.html
@@ -3,18 +3,36 @@ title: News
 position: 5
 ---
 
-<div class="col s12 l6">
-  <h4>News</h4>
-  <div class="divider"></div>
-  <div class="collection ">
-  {% for post in site.categories.news %}
-  <a class="collection-item" href="{{post.url}}">
-  {{ post.date | date:"%Y-%m-%d" }} - {{ post.title }}
-  </a>
-  {% endfor %}
+<div class="section no-pad-bot news-gradient" id="index-banner">
+  <div class="container">
+    <br><br>
+    <h1 class="header center white-text floating-text-black">cSploit 2</h1>
+    <div class="row center">
+      <h5 class="header col s12 light white-text floating-text-black">Better than ever</h5>
+    </div>
+    <div class="row center">
+      <a href="downloads.html" id="download-button" class="btn-large waves-effect waves-light green">Get Started</a>
+    </div>
+    <br><br><br><br><br><br>
   </div>
 </div>
-<div class="col s12 l6">
-<a class="twitter-timeline" href="https://twitter.com/tux_mind" data-widget-id="719201507011346432">Tweet di @tux_mind</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+<div class="container">
+  <div class="section">
+    <div class="col s12 l6">
+      <h4>News</h4>
+      <div class="divider"></div>
+      <div class="collection">
+      {% for post in site.categories.news %}
+      <a class="collection-item" href="{{post.url}}">
+      {{ post.date | date:"%Y-%m-%d" }} - {{ post.title }}
+      </a>
+      {% endfor %}
+      </div>
+    </div>
+    <div class="col s12 l6"><br><br><br>
+      <a class="twitter-timeline" href="https://twitter.com/tux_mind" data-widget-id="719201507011346432"></a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </div>
+  </div>
 </div>
