Revert "Finished News and Story, general fixes"
This reverts commit 32e7cd191c65f3a9e6d45ae1d6451a5ee77f5a69.

--- a/downloads.html
+++ b/downloads.html
@@ -1,164 +1,21 @@
 ---
 title: Downloads
 position: 3
-layout: blank
 ---
-    <div class="section no-pad-bot downloads-gradient" id="index-banner">
-      <div class="container">
-        <br><br>
-        <h1 class="header center white-text floating-text-white">Downloads [BETA]</h1>
-        <div class="row center">
-          <h5 class="header col s12 light white-text floating-text-white">Download builds for Android and iOS</h5>
-        </div>
-        <div class="row center">
-          <a href="downloads.html" id="download-button" class="btn-large waves-effect waves-light green">Get Started</a>
-        </div>
-        <br><br><br><br><br><br>
-
-      </div>
-    </div>
-<div class="container">
-  <div class="section">
-    <div class="row">
-      <!-- TODO Add github dependencies, info and links -->
-
-      <div class="col s6 s12">
-        <ul class="collapsible collection" data-collapsible="accordion">
-          <li class="collection-header"><h2 class="title center">iOS Builds</h2></li>
-          <li>
-            <div class="collapsible-header">
-
-              <a href="#!" class="secondary-content"><i class="material-icons">send</i></a>
-
-              <span class="new badge">new v2.0.1</span><i class="material-icons">system_update</i> Download Stable
-              release
-
-            </div>
-
-
-            <div class="collapsible-body">
-              <p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <font class="title"><b>Download .IPA Installer</b></font></p>
-              <p><script>
-
-              </script></p>
-            </div>
-          </li>
-          <li>
-            <div class="collapsible-header"><i class="material-icons">place</i> Download Beta</div>
-            <div class="collapsible-body"><p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font class="title"><b>Download .IPA Installer</b></font></p></div>
-          </li>
-          <li>
-            <div class="collapsible-header"><i class="material-icons">whatshot</i> Download source</div>
-            <div class="collapsible-body"><p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font class="title"><b>Download Source</b></font></p></div>
-          </li>
-        </ul>
-      </div>
-
-      <div class="col s6 s12">
-        <!-- Android Content -->
-        <h2 class="title center floating-text-black">Android Builds</h2>
-
-        <ul class="collapsible" data-collapsible="accordion">
-          <li>
-            <div class="collapsible-header"><span class="new badge">new v2.0.1</span><i class="material-icons">system_update</i> Download Stable release</div>
-            <div class="collapsible-body"><p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font class="title"><b>Download .APK Archive</b></font></p></div>
-          </li>
-          <li>
-            <div class="collapsible-header"><i class="material-icons">place</i> Download Beta</div>
-            <div class="collapsible-body"><p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font class="title"><b>Download .APK Archive</b></font></p></div>
-          </li>
-          <li>
-            <div class="collapsible-header"><i class="material-icons">whatshot</i> Download source</div>
-            <div class="collapsible-body"><p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font class="title"><b>Download Source</b></font></p></div>
-          </li>
-        </ul>
-      </div>
-
-    </div>
-
-  </div>
-  <br><br>
-
-
-  <div class="row">
-    <div class="col s12 m12 center-alig">
-
-      <!-- TODO improve table, set right checksum, responsive -->
-
-      <table class="highlight centered responsive-table">
-        <thead>
-        <tr>
-          <th data-field="id">Version</th>
-          <th data-field="name">MD5</th>
-          <th data-field="name">SHA-256</th>
-        </tr>
-        </thead>
-
-        <tbody>
-        <tr>
-          <td>Version</td>
-          <td>iOS Release</td>
-          <td>Raw Archive</td>
-        </tr>
-        <tr>
-          <td>v2.0</td>
-          <td>2ad5657ab0cb6f66a7a8c6c061ff3512</td>
-          <td>01c7513e723da5bde2ea837613846085</td>
-        </tr>
-
-
-        <tr>
-          <td>v2.0-rc2</td>
-          <td>2ad5657ab0cb6f66a7a8c6c061ff3512</td>
-          <td>01c7513e723da5bde2ea837613846085</td>
-        </tr>
-
-
-        <tr>
-          <td>v2.0-rc1</td>
-          <td>2ad5657ab0cb6f66a7a8c6c061ff3512</td>
-          <td>01c7513e723da5bde2ea837613846085</td>
-        </tr>
-
-
-        <tr>
-          <td>v1.6.1</td>
-          <td>2ad5657ab0cb6f66a7a8c6c061ff3512</td>
-          <td>01c7513e723da5bde2ea837613846085</td>
-        </tr>
-
-
-        <tr>
-          <td>v1.5.0</td>
-          <td>2ad5657ab0cb6f66a7a8c6c061ff3512</td>
-          <td>01c7513e723da5bde2ea837613846085</td>
-        </tr>
-
-
-        </tbody>
-      </table>
-
-
-    </div>
-  </div>
-
-
+<div class="section">
+  <h5>cSploit Release APK</h5>
+  <p>cSploit releases are hosted on github.</p>
+  <ul>
+    <li><b>- release</b> are stables versions.</li>
+    <li><b>- pre-release</b> are almost stable versions.</li>
+  </ul>
+  <p>To download the application, click on the green button below and download the latest "cSploit-release.apk" file.</p>
+  
+  <a href="https://github.com/cSploit/android/releases" id="download-button-release" class="btn green waves-effect waves-light">Download</a>
+  
 </div>
-
-<div class="github-commit">
-  <div class="container">
-    <div class="commit">
-      Latest Commit on Github:
-      &nbsp;&nbsp;
-      <a href="" class="sha"></a>
-      &nbsp;&nbsp;
-      <span class="date"></span>
-      <!-- TODO add toasts and github json parsed data -->
-      <a id="github-button-issues" href="https://github.com/AndreaCioccarelli/cSploit2/" class="btn-flat right grey-text text-lighten-5 waves-effect material-git">Github</a>
-      <a id="github-button-pull" href="https://github.com/AndreaCioccarelli/cSploit2/issues" class="btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only">Issues</a>
-      <a id="github-button" href="https://github.com/AndreaCioccarelli/cSploit2/pulls" class="btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only">Pull requests</a>
-
-    </div>
-  </div>
+<div class="section">
+  <h5>cSploit Nightly APK</h5>
+  <p>Thanks to xaitax - nightly builds are available:</p>
+  <a href="http://rootbitch.cc/csploit/cSploit-nightly.apk" id="download-button-beta" class="btn green waves-effect waves-light">Download</a>
 </div>
