Finished News page

--- a/news.html
+++ b/news.html
@@ -8,10 +8,10 @@ position: 5
     <br><br>
     <h1 class="header center white-text floating-text-black">cSploit 2</h1>
     <div class="row center">
-      <h5 class="header col s12 light white-text floating-text-black">Better than ever</h5>
+      <h5 class="header col s12 light white-text floating-text-black">Official news</h5>
     </div>
     <div class="row center">
-      <a href="downloads.html" id="download-button" class="btn-large waves-effect waves-light green">Get Started</a>
+      <a href="downloads.html" id="download-button" class="btn-large waves-effect waves-light green">Subscribe at the newsletter</a>
     </div>
     <br><br><br><br><br><br>
   </div>
