Fixed home page, Material color tweaks

--- a/home.html
+++ b/home.html
@@ -30,12 +30,12 @@ layout: blank
 
                     <p class="light">My final goal is to write an application that is able to:
                     <ul class="light">
-                        <li>- enumerate local hosts<i class="tiny material-icons">done</i></li>
-                        <li>- find vulnerabilities<i class="tiny material-icons">done</i></li>
-                        <li>- find exploits for these vulnerabilities<i class="tiny material-icons">done</i></li>
-                        <li>- use those exploits to gain access to the target<i class="tiny material-icons">done</i></li>
-                        <li>- crack wifi passwords</li>
-                        <li>- install backdoors for later access</li>
+                    <li><i class="tiny material-icons">check</i> Enumerate local hosts</li>
+                    <li><i class="tiny material-icons">check</i> Find vulnerabilities</li>
+                    <li><i class="tiny material-icons">check</i> Find exploits for these vulnerabilities</li>
+                    <li><i class="tiny material-icons">check</i> Use those exploits to gain access to the target</li>
+                    <li><i class="tiny material-icons">close</i> Crack wifi passwords</li>
+                    <li><i class="tiny material-icons">close</i> Install backdoors for later access</li>
                     </ul>
                     </p>
                 </div>
