Bugfix, Box fixes, Footer 2.0
In this commit I have fixed a lot of bugs, added custom css values in main.css and fixed some text / spelling boxes. I have also redesigned the footer with 2 scripts and I'm going to improve it, for now is only a beta.

--- a/home.html
+++ b/home.html
@@ -46,9 +46,10 @@ layout: blank
                     <h2 class="center green-text"><i class="medium material-icons">settings</i></h2>
                     <h5 class="center">Portability</h5>
 
-                    <p class="light">Thanks to the new core, cSploit will be easily portable.
-                        <br /><br />
-                        Basically it can run on any UNIX-based system, but for now only Android is supported. When I reach a beta-state version I will consider working on iOS, OSX, GTK+ and QT.</p>
+                    <p class="light">Thanks to the new go-based core, cSploit will be easily portable.
+                        <br><br>
+                        It can run on Android and iOS, also on Desktop OS, such as Windows, Linux and macOS.
+                        cSploit 2 have a web-based UI [...] <!-- TODO: Build description --> </p>
                 </div>
             </div>
 
