CSS fixes and improvements, Content enhancement
- Fixed broken links
- Removed comments from main css file
- Logged full website memory usage and performances fixes
- Updated some news files
- Removed pointless css lines

--- a/downloads.html
+++ b/downloads.html
@@ -11,7 +11,7 @@ layout: blank
           <h5 class="header col s12 light white-text floating-text-white">Download builds for Android and iOS</h5>
         </div>
         <div class="row center">
-          <a href="downloads.html" id="download-button" class="btn-large waves-effect waves-light green">Get Started</a>
+          <a href="" id="download-button" class="btn-large waves-effect waves-light green">Get Started</a>
         </div>
         <br><br><br><br><br><br>
 
@@ -155,9 +155,9 @@ layout: blank
       &nbsp;&nbsp;
       <span class="date"></span>
       <!-- TODO add toasts and github json parsed data -->
-      <a id="github-button-issues" href="https://github.com/AndreaCioccarelli/cSploit2/" class="btn-flat right grey-text text-lighten-5 waves-effect material-git">Github</a>
-      <a id="github-button-pull" href="https://github.com/AndreaCioccarelli/cSploit2/issues" class="btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only">Issues</a>
-      <a id="github-button" href="https://github.com/AndreaCioccarelli/cSploit2/pulls" class="btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only">Pull requests</a>
+      <a id="github-button-issues" href="https://github.com/AndreaCioccarelli/cSploit2/" class="github-button btn-flat right grey-text text-lighten-5 waves-effect material-git">Github</a>
+      <a id="github-button-pull" href="https://github.com/AndreaCioccarelli/cSploit2/issues" class="github-button btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only">Issues</a>
+      <a id="github-button" href="https://github.com/AndreaCioccarelli/cSploit2/pulls" class="github-button btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only">Pull requests</a>
 
     </div>
   </div>
