--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@ layout: blank
             <h5 class="header col s12 light white-text floating-text-black">Better than ever</h5>
         </div>
         <div class="row center">
-            <a href="downloads.html" id="download-button" class="btn-large waves-effect waves-light green">Get Started</a>
+            <a href="/downloads" id="download-button" class="btn-large waves-effect waves-light green">Get Started</a>
         </div>
         <br><br><br><br><br><br>
     </div>
