--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@ position: 5
       <h5 class="header col s12 light white-text floating-text-black">Official news</h5>
     </div>
     <div class="row center">
-      <a href="downloads.html" id="download-button" class="btn-large waves-effect waves-light green">Subscribe at the newsletter</a>
+      <a href="" id="download-button" class="btn-large waves-effect waves-light green">Subscribe at the newsletter</a>
     </div>
     <br><br><br><br><br><br>
   </div>
