Added Contact page, Fixes, CSS gradients updated
- Updated CSS gradients
- Fixed some rendering bugs
- Analyzed content
- Builded RAW page for contacts
// TODO: Finish Contacts page

--- a/downloads.html
+++ b/downloads.html
@@ -17,6 +17,7 @@ layout: blank
 
       </div>
     </div>
+
 <div class="container">
   <div class="section">
     <div class="row">
@@ -79,12 +80,30 @@ layout: blank
 
   </div>
   <br><br>
+</div>
 
 
+  <div class="section no-pad-bot downloads-horizontal-gradient">
+    <div class="container">
+      <br><br><br><br>
+      <h1 class="header center white-text floating-text-white">Hashes</h1>
+      <div class="row center">
+        <h5 class="header col s12 light white-text floating-text-white">Hash verification kit</h5>
+      </div>
+      <div class="row center">
+        <a href="" class="btn-large waves-effect waves-light green">Get Started</a>
+      </div>
+      <br><br><br><br><br><br>
+
+    </div>
+  </div>
+
+
+<div class="section">
   <div class="row">
-    <div class="col s12 m12 center-alig">
+    <div class="col s10 m12 center-alig">
 
-      <!-- TODO improve table, set right checksum, responsive -->
+      <!-- TODO improve table, set right checksum, responsive, center -->
 
       <table class="highlight centered responsive-table">
         <thead>
