--- a/docs.html
+++ b/docs.html
@@ -100,7 +100,9 @@ layout: blank
             <h5 class="header col s12 light white-text floating-text-black">Use cSploit &amp; Cordova APIs to build and customize the project</h5>
         </div>
         <div class="row center">
-            <a href="https://www.github.com/cSploit/client" class="btn-large waves-effect waves-light green" onclick="Materialize.toast('Redirecting to Github repo...', 4500)">Github</a>
+            <a href="https://www.github.com/cSploit/" class="btn-large waves-effect waves-light green" onclick="Materialize.toast('Redirecting to Github Server repository...', 4500)">Server</a>
+            <a href="https://www.github.com/cSploit/client" class="btn-large waves-effect waves-light green" onclick="Materialize.toast('Redirecting to Github Client repository...', 4500)">Client</a>
+            <a href="https://www.github.com/cSploit/client" class="btn-large waves-effect waves-light green" onclick="Materialize.toast('Redirecting to Github Daemon repository...', 4500)">Daemon</a>
         </div>
         <br><br><br><br><br><br><br>
 
@@ -111,7 +113,25 @@ layout: blank
     <div class="section">
 
         <div class="row">
-            <div class="col s12 m6"><br><br>
+            <div class="col s12 m12"><br><br>
+                <div class="row">
+                    <div class="col s12 m12">
+                        <div class="card blue-grey darken-1">
+                            <div class="card-content white-text">
+                                <span class="card-title">cSploit internal modules</span>
+                                    {% capture docs_detailed_modules %}{% include docs_detailed_modules.md %}{% endcapture %}
+                                    {{ docs_detailed_modules | markdownify }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="row">
+            <div class="col s12 m6">
                 <div class="dcard white darken-1 z-depth-2 float">
                     <div class="dcard-content white-text">
                         <font color="#323232">{% capture dcard1 %}{% include docs_devcard1.md %}{% endcapture %}
