--- a/downloads.html
+++ b/downloads.html
@@ -6,7 +6,7 @@ layout: blank
     <div class="section no-pad-bot downloads-gradient" id="index-banner">
       <div class="container">
         <br><br>
-        <h1 class="header center white-text floating-text-white">Downloads [BETA]</h1>
+        <h1 class="header center white-text floating-text-white">Downloads</h1>
         <div class="row center">
           <h5 class="header col s12 light white-text floating-text-white">Download builds for Android and iOS</h5>
         </div>
@@ -23,57 +23,72 @@ layout: blank
     <div class="row">
       <!-- TODO Add github dependencies, info and links -->
 
-      <div class="col s6 s12">
-        <ul class="collapsible collection" data-collapsible="accordion">
-          <li class="collection-header"><h2 class="title center">iOS Builds</h2></li>
-          <li>
-            <div class="collapsible-header">
-
-              <a href="#!" class="secondary-content"><i class="material-icons">send</i></a>
-
-              <span class="new badge">new v2.0.1</span><i class="material-icons">system_update</i> Download Stable
-              release
-
-            </div>
-
-
-            <div class="collapsible-body">
-              <p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <font class="title"><b>Download .IPA Installer</b></font></p>
-              <p><script>
-
-              </script></p>
-            </div>
-          </li>
-          <li>
-            <div class="collapsible-header"><i class="material-icons">place</i> Download Beta</div>
-            <div class="collapsible-body"><p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font class="title"><b>Download .IPA Installer</b></font></p></div>
-          </li>
-          <li>
-            <div class="collapsible-header"><i class="material-icons">whatshot</i> Download source</div>
-            <div class="collapsible-body"><p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font class="title"><b>Download Source</b></font></p></div>
-          </li>
-        </ul>
+      <div class="card indigo float">
+        <div class="card-content white-text">
+          <h3 class="white-text">cSploit for iOS</h3>
+          <p>{% capture download_iOS_head %}{% include download_iOS_head.md %}{% endcapture %}
+            {{ download_iOS_head | markdownify }}</p>
+        </div>
+        <div class="card-tabs tabs-fixed-width tabs-transparent">
+          <ul class="tabs tabs-fixed-width">
+            <!-- TODO replace these titles -->
+            <li class="tab"><a class="active" href="#csploit-iOS-1">STABLE RELEASE</a></li>
+            <li class="tab"><a href="#csploit-iOS-2">BETA RELEASE</a></li>
+            <li class="tab"><a href="#csploit-iOS-3">SOURCE CODE</a></li>
+          </ul>
+        </div>
+        <div class="card-content grey lighten-4">
+          <div id="csploit-iOS-1">
+            {% capture download_iOS_release %}{% include download_iOS_release.md %}{% endcapture %}
+            {{ download_iOS_release | markdownify }}
+            <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Download</a>
+          </div>
+          <div id="csploit-iOS-2">
+            {% capture download_iOS_beta %}{% include download_iOS_beta.md %}{% endcapture %}
+            {{ download_iOS_beta | markdownify }}
+          <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Download</a>
+          </div>
+          <div id="csploit-iOS-3">
+            {% capture download_iOS_code %}{% include download_iOS_code.md %}{% endcapture %}
+            {{ download_iOS_code | markdownify }}
+          <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Download</a>
+          </div>
+        </div>
       </div>
 
-      <div class="col s6 s12">
-        <!-- Android Content -->
-        <h2 class="title center floating-text-black">Android Builds</h2>
+      <br><br>
 
-        <ul class="collapsible" data-collapsible="accordion">
-          <li>
-            <div class="collapsible-header"><span class="new badge">new v2.0.1</span><i class="material-icons">system_update</i> Download Stable release</div>
-            <div class="collapsible-body"><p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font class="title"><b>Download .APK Archive</b></font></p></div>
-          </li>
-          <li>
-            <div class="collapsible-header"><i class="material-icons">place</i> Download Beta</div>
-            <div class="collapsible-body"><p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font class="title"><b>Download .APK Archive</b></font></p></div>
-          </li>
-          <li>
-            <div class="collapsible-header"><i class="material-icons">whatshot</i> Download source</div>
-            <div class="collapsible-body"><p class="card-title"><a class="btn-flat waves-effect waves-light green"><font color="#FFFFFF">Download</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font class="title"><b>Download Source</b></font></p></div>
-          </li>
-        </ul>
+      <div class="card indigo float">
+        <div class="card-content white-text">
+          <h3 class="white-text">cSploit for Android</h3>
+          <p>{% capture download_iOS_head %}{% include download_iOS_head.md %}{% endcapture %}
+            {{ download_iOS_head | markdownify }}</p>
+        </div>
+        <div class="card-tabs tabs-fixed-width tabs-transparent">
+          <ul class="tabs tabs-fixed-width">
+            <!-- TODO replace these titles -->
+            <li class="tab"><a class="active" href="#csploit-android-1">STABLE RELEASE</a></li>
+            <li class="tab"><a href="#csploit-android-2">BETA RELEASE</a></li>
+            <li class="tab"><a href="#csploit-android-3">SOURCE CODE</a></li>
+          </ul>
+        </div>
+        <div class="card-content grey lighten-4">
+          <div id="csploit-android-1">
+            {% capture download_iOS_release %}{% include download_iOS_release.md %}{% endcapture %}
+            {{ download_iOS_release | markdownify }}
+            <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Download</a>
+          </div>
+          <div id="csploit-android-2">
+            {% capture download_iOS_beta %}{% include download_iOS_beta.md %}{% endcapture %}
+            {{ download_iOS_beta | markdownify }}
+            <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Download</a>
+          </div>
+          <div id="csploit-android-3">
+            {% capture download_iOS_code %}{% include download_iOS_code.md %}{% endcapture %}
+            {{ download_iOS_code | markdownify }}
+            <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Download</a>
+          </div>
+        </div>
       </div>
 
     </div>
@@ -82,13 +97,14 @@ layout: blank
   <br><br>
 </div>
 
+<!--
 
   <div class="section no-pad-bot downloads-horizontal-gradient">
     <div class="container">
       <br><br><br><br>
       <h1 class="header center white-text floating-text-white">Hashes</h1>
       <div class="row center">
-        <h5 class="header col s12 light white-text floating-text-white">Hash verification kit</h5>
+        <h5 class="header col s12 light white-text floating-text-white"></h5>
       </div>
       <div class="row center">
         <a href="" class="btn-large waves-effect waves-light green">Get Started</a>
@@ -103,7 +119,7 @@ layout: blank
   <div class="row">
     <div class="col s10 m12 center-alig">
 
-      <!-- TODO improve table, set right checksum, responsive, center -->
+       TODO improve table, set right checksum, responsive, center
 
       <table class="highlight centered responsive-table">
         <thead>
@@ -162,8 +178,7 @@ layout: blank
     </div>
   </div>
 
-
-</div>
+</div>-->
 
 <div class="github-commit">
   <div class="container">
@@ -173,10 +188,9 @@ layout: blank
       <a href="" class="sha"></a>
       &nbsp;&nbsp;
       <span class="date"></span>
-      <!-- TODO add toasts and github json parsed data -->
-      <a id="github-button-issues" href="https://github.com/AndreaCioccarelli/cSploit2/" class="github-button btn-flat right grey-text text-lighten-5 waves-effect material-git">Github</a>
-      <a id="github-button-pull" href="https://github.com/AndreaCioccarelli/cSploit2/issues" class="github-button btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only">Issues</a>
-      <a id="github-button" href="https://github.com/AndreaCioccarelli/cSploit2/pulls" class="github-button btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only">Pull requests</a>
+      <a id="github-button-issues" href="https://github.com/cSploit/cSploit.github.io" class="github-button btn-flat right grey-text text-lighten-5 waves-effect material-git" onclick="Materialize.toast('Redirecting to Github ...', 4500)">Github</a>
+      <a id="github-button-pull" href="https://github.com/cSploit/cSploit.github.io/issues" class="github-button btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only" onclick="Materialize.toast('Redirecting to Github...', 4500)">Issues</a>
+      <a id="github-button" href="https://github.com/cSploit/cSploit.github.io/pulls" class="github-button btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only" onclick="Materialize.toast('Redirecting to Github...', 4500)">Pull requests</a>
 
     </div>
   </div>
